--- a/arbete.css
+++ b/arbete.css
@@ -15,9 +15,8 @@
   #menu{
     display: none;
     position: absolute;
-    left: 40%; height: auto; top: 0;
+    left: 100px; height: auto; top: 25px;
     padding: 0; margin: 0;
-    align-items: center;
   }
 
   .menuLogo{
@@ -32,6 +31,7 @@
   ul{
       display: inline-block;  
       list-style-type: none;
+      
   
   }
   
@@ -39,7 +39,6 @@
   
     display: inline-block;
     margin-right: 20px ;
-    
   }
 * {
   font-family: 'Roboto Mono', monospace;
