--- a/arbete.css
+++ b/arbete.css
@@ -70,8 +70,6 @@ html, body{
 /* CSS för portfolio */
 .postImg{
   width: 100%;
-  height: fit-content;
-  display: none;
 }
 
 #post {
@@ -88,5 +86,47 @@ html, body{
   margin-right: 5%;
 }
 
+#currentSlides{
+  text-align: center;
+}
+
+/* CSS för kontakta oss */
+input[type=text], select, textarea {
+  width: 100%; 
+  padding: 12px; 
+  border: 1px solid #ccc; 
+  border-radius: 4px; 
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px; 
+  resize: vertical 
+}
 
 
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
+input[type=submit]:hover {
+  background-color: #45a049;
+  
+}
+
+
+.contactForm {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  bottom: 20%;
+  display: table;
+}
+
+#contactBody{
+  background-color:#f2f2f2;
+}
