--- a/arbete.css
+++ b/arbete.css
@@ -72,11 +72,6 @@ p{
 }
 
 
-/* CSS för portfolio */
-/* .postImg{
-  width: 100%;
-} */
-
 /* Kontent på sidan (exk. meny) */
 #wrapperMain{
 width: 100%; height: 100%;
@@ -101,31 +96,22 @@ margin: 0;
 /* CSS för kontakta oss */
 input[type=text], select, textarea {
   width: 100%; 
-  padding: 12px; 
+  padding: 0.8em; 
   border: 1px solid #ccc; 
-  border-radius: 4px; 
+  border-radius: 0.2em; 
   box-sizing: border-box; 
-  margin-top: 6px; 
-  margin-bottom: 16px; 
-  resize: vertical 
+  margin-top: 2%; 
+  margin-bottom: 3%;
 }
 
 
 input[type=submit] {
-  background-color: #04AA6D;
+  background-color: rgb(149, 94, 194);
   color: white;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
-  cursor: pointer;
 }
-
-
-input[type=submit]:hover {
-  background-color: #45a049;
-  
-}
-
 
 .contactForm {
   border-radius: 5px;
@@ -216,7 +202,7 @@ input[type=submit]:hover {
         max-width: 38em;
       }
 
-/* homepage */      
+/* CSS för homepage */      
 #novahuset{
   width: 100%;
   height: 100%;
@@ -227,4 +213,25 @@ input[type=submit]:hover {
 
 #frontpageText{
   margin: 5% 0 0 0;
+}
+
+/* CSS för ALLA personliga sidor */
+.img{
+  width: 55%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+}
+.textDiv{
+  width: auto;
+  height: auto;
+  float: left;
+}
+
+.personalText{
+  margin-left: 1em;
+  margin-right: 0.5em;
 }
