--- a/arbete.css
+++ b/arbete.css
@@ -177,10 +177,10 @@ input[type=submit]:hover {
 } */
 
 #aboutText{
-  width: 80%; 
+  width: 95%; 
   padding: 12px; 
-  border: 1px solid #ccc; 
-  border-radius: 4px; 
+  /* border: 1px solid #ccc;  */
+  border: rgb(71, 36, 104) solid 0.5em;
   box-sizing: border-box; 
   margin: 0 auto 0 auto ;
   /* margin-top: 6px; 
@@ -193,7 +193,7 @@ input[type=submit]:hover {
     background-color: rgb(179, 164, 192);
     margin: 0 auto 3em auto;
     padding: 1em 0 0 0;
-    border: rgb(149, 94, 194) solid 0.4em;
+    border: rgb(71, 36, 104) solid 0.5em;
   }
     .postTitle{
       text-align: center;
@@ -204,7 +204,7 @@ input[type=submit]:hover {
         margin: 0 auto 0 auto;
       }
         .slidePic{
-          width: 100%; height: 15em;
+          width: 100%; height: 16em;
         }
       .button{
         margin: 2% 0 0 5%;
@@ -220,9 +220,6 @@ input[type=submit]:hover {
 #novahuset{
   width: 100%;
   height: 100%;
-}
-#textDiv{
-  
 }
 
 #frontpageText{
