--- a/arbete.css
+++ b/arbete.css
@@ -40,10 +40,10 @@ p{
     }
       #homeIcon{
         width: auto;
-        margin: 0;
+        margin: 0 0 0 0;
         padding: 0.6em 0.6em 0.6em 0.6em;
         height: 2.8em;
-
+        float: right;
       }
 /* _________________ */
 
@@ -307,6 +307,17 @@ input[type=submit] {
         padding: 5% 0 8% 0;
         margin: 0 auto 0 auto;
         max-width: 38em;
+      }
+      @media screen and (min-width: 768px){
+        .post{
+          margin: 0 3% 0 18%;
+          width: 46%;
+
+          
+        }
+        .slidePic{
+          height: auto;
+        }
       }
 
 /* CSS för ALLA personliga sidor */
