--- a/arbete.css
+++ b/arbete.css
@@ -15,7 +15,7 @@ p{
 
 /* Början av Header */
 .header{
-  padding: 0 0 0 0; margin: 0;
+  padding: 0 0 0 0; margin: 0 0 0 0;
   background-color: rgb(149, 94, 194);
   width: 100%; height: 4em;
   position: fixed;
@@ -28,7 +28,7 @@ p{
   }
     #menuIcon{
       width: auto;
-      margin: 0;
+      margin: 0 0 0 0;
       padding: 0.6em 0.6em 0.6em 0.6em;
       height: 2.8em;
     }
@@ -36,13 +36,13 @@ p{
       width: 4em; height: 4em;
       margin: 0 0 0 0;
       padding: 0 0 0 0;
-      top: 0; right: 0;
+      position: fixed; top: 0; right: 0;
     }
       #homeIcon{
         width: auto;
-        margin: 0;
+        margin: 0 0 0 0;
         padding: 0.6em 0.6em 0.6em 0.6em;
-        height: 2.8em;
+        height: 2.7em;
 
       }
 /* _________________ */
@@ -65,12 +65,17 @@ p{
 
     .dropdownLi{
       margin: 0 0 0 0;
-      padding: 0 0 3em 0.8em;
+      padding: 0 0 4em 0.8em;
       color: white;
+      
     }
 
       .dropdownA{
         color: rgb(188, 147, 226);
+        font-size:larger;
+        text-decoration: none;
+        /* text-decoration-color: #000000;
+        text-decoration-thickness: 0.12em; */
       }
 /* _________________ */
 
@@ -114,17 +119,19 @@ p{
   }
     #dropdownUlDesktop{
     list-style-type: none;
-    padding: 1.5em 0 0 0;
+    padding: 4em 0 0 0;
     margin: 0 0 0 0;
     /* position: relative; */
     }
       .dropdownLiDesktop{
         margin: 0 0 0 0;
-        padding: 0 0 3em 0.8em;
+        padding: 0 0 70% 0.8em;
         color: white;
       }
         .dropdownADesktop{
-          color: rgb(188, 147, 226);
+        color: rgb(188, 147, 226);
+        font-size:larger;
+        text-decoration: none;
         }
         .hidden{
           display: block;
