--- a/arbete.css
+++ b/arbete.css
@@ -309,16 +309,65 @@ input[type=submit] {
         max-width: 38em;
       }
       @media screen and (min-width: 768px){
-        .post{
+        .pageTitle{
           margin: 0 3% 0 18%;
-          width: 46%;
-
           
+        }
+        .post{
+          margin: 0 15% 3% 30%;
+          width: auto;
+          max-width: 555px;
+          display: block;
+          text-align: center;
         }
         .slidePic{
           height: auto;
+          max-width: 555px;
+          vertical-align: middle;
+        }
+        .gallery{
+          height: 20em;
+        }
+        @media screen and (min-width: 970px){
+          .gallery{
+            height: 22em;
+
+            
+          }
+          @media screen and (min-width: 1040px){
+            /* .p1{
+              width: 25%;
+              margin: 0 3% 0 18%;
+              display: inline-block;
+            }
+            .p2{
+              width: 25%;
+              margin: 0 3% 0 2%;
+              display: inline-block;
+            } */
+            .gallery{
+              height: 13em;
+            }
+            .postMain{
+              margin: 0 3% 0 18%;
+            }
+            .post{
+              display: inline-block;
+              width: 35%;
+              margin: 0 5% 0 7%;
+            }
+            .button{
+              margin: 15% 0 0 0;
+            }
+            @media screen and (min-width: 1560px){
+              .gallery{
+                height: 16em;
+              }
+            }
+          }
         }
       }
+      
 
 /* CSS för ALLA personliga sidor */
 .img{
