--- a/arbete.css
+++ b/arbete.css
@@ -182,28 +182,38 @@ margin: 0;
       }
 
 /* CSS för kontakta oss */
-input[type=text], select, textarea {
+.textValue, #contact {
   width: 100%; 
-  padding: 0.8em; 
-  border: 1px solid #ccc; 
-  border-radius: 0.2em; 
+  padding: 0.8em;
+  margin: 2% 0 3% 0;
+  border: solid 1px black;
+  border-radius: 0.2em;
   box-sizing: border-box; 
-  margin-top: 2%; 
-  margin-bottom: 3%;
 }
-input[type=submit] {
+#submitButton {
+  padding: 0.75em 1.25em;
   background-color: rgb(149, 94, 194);
   color: white;
-  padding: 12px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 0.3em;
 }
 .contactForm {
-  border-radius: 5px;
+  padding: 1.25em;
   background-color: #f2f2f2;
-  padding: 20px;
   bottom: 20%;
   display: table;
+}
+.contact{
+  margin-top: 1em;
+}
+
+.alert{
+  margin-top: 1em;
+}
+
+#textArea{
+  height: 16em;
+  
 }
 
 /* CSS för "about.html" */
