--- a/arbete.css
+++ b/arbete.css
@@ -190,13 +190,23 @@ margin: 0;
   border-radius: 0.2em;
   box-sizing: border-box; 
 }
-#submitButton {
+
+.submitButton {
   padding: 0.75em 1.25em;
   background-color: rgb(149, 94, 194);
   color: white;
   border: none;
   border-radius: 0.3em;
 }
+
+.hideButton{
+
+  display:none;
+
+}
+
+
+
 .contactForm {
   padding: 1.25em;
   background-color: #f2f2f2;
